--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,12 +31,12 @@
         </tr>
     </thead>
     <tbody>
-        <% for(var i=0; i<users.length; i++) {%>
+        <% /* for(var i=0; i<meetings.length; i++) {%>
         <tr>
             <td><%= meetings[i]._id %></td>
             <td><%= meetings[i].clientId %></td>
             <td><%= meetings[i].meetingId %></td>
         </tr>
-        <% } %>
+        <% } */ %>
     </tbody>
 </table>
